--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev --turbopack",
+    "dev": "npx kill-port 3000 && next dev --turbopack",
     "start": "next start",
     "format": "prettier --write ."
   },
