--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev": "^0.1.3",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
-    "next": "latest",
+    "next": "15.3.1-canary.6",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
